toolbar z-index bugs fixing

--- a/src/Views/assets/css/toolbar.css
+++ b/src/Views/assets/css/toolbar.css
@@ -15,6 +15,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 9999999;
 }
 
 #gear-toolbar-icon {
